--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,18 @@
       ]
     },
     {
+      "name": "Home Assistant - skip-pip local modules",
+      "type": "python",
+      "request": "launch",
+      "module": "homeassistant",
+      "args": [
+        "--debug",
+        "--skip-pip",
+        "-c",
+        "config"
+      ]
+    },
+    {
       // Debug by attaching to local Home Asistant server using Remote Python Debugger.
       // See https://www.home-assistant.io/integrations/debugpy/
       "name": "Home Assistant: Attach Local",
